versions/v4.2.0/samples/sensor/sensor.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/samples/sensor/sensor.html
original_path: samples/sensor/sensor.html
---

# Sensors

These samples demonstrate how to use various sensors supported by Zephyr.

- [Accelerometer trigger](accel_trig/README.md#accel_trig "Test and debug accelerometer with interrupts.")Test and debug accelerometer with interrupts.
- [ADT7420 high-accuracy digital I2C temperature sensor](adt7420/README.md#adt7420 "Get temperature data from an ADT7420 sensor using polling and window mode.")Get temperature data from an ADT7420 sensor using polling and window mode.
- [AMG88XX infrared array sensor](amg88xx/README.md#amg88xx "Get temperature data from an AMG88XX 8x8 thermal camera sensor.")Get temperature data from an AMG88XX 8x8 thermal camera sensor.
- [ams iAQcore indoor air quality sensor](ams_iAQcore/README.md#ams_iaqcore "Get CO2 equivalent and VOC data from an ams iAQcore sensor.")Get CO2 equivalent and VOC data from an ams iAQcore sensor.
- [APDS9960 RGB, ambient light, and gesture sensor](apds9960/README.md#apds9960 "Get ambient light, RGB, and proximity/gesture data from an APDS9960 sensor.")Get ambient light, RGB, and proximity/gesture data from an APDS9960 sensor.
- [Barometric pressure and temperature sensor interrupt example](pressure_interrupt/README.md#pressure_interrupt "Manage interrupts from a barometric pressure and temperature sensor.")Manage interrupts from a barometric pressure and temperature sensor.
- [Barometric pressure and temperature sensor polling example](pressure_polling/README.md#pressure_polling "Get barometric pressure and temperature data from a sensor.")Get barometric pressure and temperature data from a sensor.
- [BME280 humidity and pressure sensor](bme280/README.md#bme280 "Get temperature, pressure, and humidity data from a BME280 sensor.")Get temperature, pressure, and humidity data from a BME280 sensor.
- [BMG160 3-axis gyroscope](bmg160/README.md#bmg160 "Get temperature, and angular velocity data from a BMG160 sensor.")Get temperature, and angular velocity data from a BMG160 sensor.
- [BMI270 6-axis IMU sensor](bmi270/README.md#bmi270 "Configure and read accelerometer and gyroscope data from a BMI270 sensor.")Configure and read accelerometer and gyroscope data from a BMI270 sensor.
- [BQ274XX fuel gauge sensor](bq274xx/README.md#bq274xx "Get various fuel gauge parameters from a BQ274XX sensor.")Get various fuel gauge parameters from a BQ274XX sensor.
- [CCS811 indoor air quality sensor](ccs811/README.md#ccs811 "Get CO2 equivalent and VOC data from a CCS811 sensor.")Get CO2 equivalent and VOC data from a CCS811 sensor.
- [CPU die temperature polling](die_temp_polling/README.md#die_temp_polling "Get CPU die temperature data from a sensor using polling.")Get CPU die temperature data from a sensor using polling.
- [DS18B20 1-Wire Temperature Sensor](ds18b20/README.md#ds18b20 "Get ambient temperature data from a DS18B20 sensor (polling mode).")Get ambient temperature data from a DS18B20 sensor (polling mode).
- [FDC2X1X Capacitance-to-Digital Converter](fdc2x1x/README.md#fdc2x1x "Get capacitance and frequency data from a FDC2X1X sensor (polling & trigger).")Get capacitance and frequency data from a FDC2X1X sensor (polling & trigger).
- [FXAS21002 Gyroscope Sensor](fxas21002/README.md#fxas21002 "Get gyroscope data synchronously from an FXAS21002 sensor.")Get gyroscope data synchronously from an FXAS21002 sensor.
- [Generic 3-Axis accelerometer polling](accel_polling/README.md#accel_polling "Get 3-Axis accelerometer data from a sensor (polling mode).")Get 3-Axis accelerometer data from a sensor (polling mode).
- [Generic 6DOF Motion Dataready](6dof_motion_drdy/README.md#6dof_motion_drdy "Get 6-Axis accelerometer and gyroscope data from a sensor (data ready interrupt mode).")Get 6-Axis accelerometer and gyroscope data from a sensor (data ready interrupt mode).
- [Generic CO2 polling sample](co2_polling/README.md#co2 "Get CO2 data from a sensor (polling mode).")Get CO2 data from a sensor (polling mode).
- [Generic device FIFO streaming](stream_fifo/README.md#stream_fifo "Get accelerometer/gyroscope/temperature FIFO data frames from a sensor using SENSOR_TRIG_FIFO_WATERMARK as a trigger.")Get accelerometer/gyroscope/temperature FIFO data frames from a sensor using
  SENSOR\_TRIG\_FIFO\_WATERMARK as a trigger.
- [Generic device sample streaming using Data Ready trigger](stream_drdy/README.md#stream_drdy "Get accelerometer data frames from a sensor using SENSOR_TRIG_DATA_READY.")Get accelerometer data frames from a sensor using SENSOR\_TRIG\_DATA\_READY.
- [Generic digital humidity temperature sensor polling](dht_polling/README.md#dht_polling "Get temperature and humidity data from a DHT sensor (polling mode).")Get temperature and humidity data from a DHT sensor (polling mode).
- [Generic distance measurement](distance_polling/README.md#distance_polling "Measure distance to an object using a distance sensor")Measure distance to an object using a distance sensor
- [Generic Light Sensor Polling](light_polling/README.md#light_sensor_polling "Get illuminance data from a light sensor.")Get illuminance data from a light sensor.
- [Grove Temperature Sensor](grove_temperature/README.md#grove_temperature "Get temperature data from a Grove temperature sensor and display it on an LCD display.")Get temperature data from a Grove temperature sensor and display it on an LCD display.
- [GROW R502-A Fingerprint Sensor](grow_r502a/README.md#grow_r502a "Store and match fingerprints using the GROW R502-A fingerprint sensor.")Store and match fingerprints using the GROW R502-A fingerprint sensor.
- [Heart Rate Sensor](heart_rate/README.md#heart_rate "Get heart rate data from a sensor (polling mode).")Get heart rate data from a sensor (polling mode).
- [HTS221 Temperature and Humidity Monitor](hts221/README.md#hts221 "Get temperature and humidity data from an HTS221 sensor (polling & trigger mode).")Get temperature and humidity data from an HTS221 sensor (polling & trigger mode).
- [I3G4250D 3-axis gyroscope sensor](i3g4250d/README.md#i3g4250d "Get gyroscope data from an I3G4250D sensor.")Get gyroscope data from an I3G4250D sensor.
- [INA219 Bidirectional Power/Current Monitor](ina219/README.md#ina219 "Get shunt voltage, bus voltage, power and current from an INA219 sensor.")Get shunt voltage, bus voltage, power and current from an INA219 sensor.
- [ISL29035 Digital Light Sensor](isl29035/README.md#isl29035 "Get light intensity data from an ISL29035 sensor (polling & trigger mode).")Get light intensity data from an ISL29035 sensor (polling & trigger mode).
- [JEDEC JC 42.4 compliant Temperature Sensor](jc42/README.md#jc42 "Get ambient temperature from a JEDEC JC 42.4 compliant temperature sensor (polling & trigger mode).")Get ambient temperature from a JEDEC JC 42.4 compliant temperature sensor (polling & trigger
  mode).
- [LIS2DH Motion Sensor](lis2dh/README.md#lis2dh "Get accelerometer data from an LIS2DH sensor (polling & trigger mode).")Get accelerometer data from an LIS2DH sensor (polling & trigger mode).
- [LPS22HB Temperature and Pressure Sensor](lps22hb/README.md#lps22hb "Get pressure and temperature data from an LPS22HB sensor (polling mode).")Get pressure and temperature data from an LPS22HB sensor (polling mode).
- [LPS22HH Temperature and Pressure Sensor](lps22hh/README.md#lps22hh "Get pressure and temperature data from an LPS22HH sensor (polling & trigger mode).")Get pressure and temperature data from an LPS22HH sensor (polling & trigger mode).
- [LPS22HH Temperature and Pressure Sensor (I3C)](lps22hh_i3c/README.md#lps22hh_i3c "Get pressure and temperature data from an LPS22HH sensor over I3C (polling & trigger mode).")Get pressure and temperature data from an LPS22HH sensor over I3C (polling &
  trigger mode).
- [LSM303DLHC Magnetometer and Accelerometer sensor](lsm303dlhc/README.md#lsmd303dlhc "Get magnetometer and accelerometer data from an LSM303DLHC sensor (polling mode).")Get magnetometer and accelerometer data from an LSM303DLHC sensor (polling
  mode).
- [LSM6DSL IMU sensor](lsm6dsl/README.md#lsmd6dsl "Get accelerometer and gyroscope data from an LSM6DSL sensor (polling & trigger mode).")Get accelerometer and gyroscope data from an LSM6DSL sensor (polling & trigger
  mode).
- [LSM6DSO IMU sensor](lsm6dso/README.md#lsmd6dso "Get accelerometer and gyroscope data from an LSM6DSO sensor (polling & trigger mode).")Get accelerometer and gyroscope data from an LSM6DSO sensor (polling & trigger
  mode).
- [LSM6DSO IMU sensor (I2C on I3C bus)](lsm6dso_i2c_on_i3c/README.md#lsmd6dso_i2c_on_i3c "Get accelerometer and gyroscope data from an LSM6DSO sensor using I2C on I3C bus (polling & trigger mode).")Get accelerometer and gyroscope data from an LSM6DSO sensor using I2C on I3C
  bus (polling & trigger mode).
- [Magnetometer Sensor](magn_polling/README.md#magn_polling "Get magnetometer data from a magnetometer sensor (polling mode).")Get magnetometer data from a magnetometer sensor (polling mode).
- [Magnetometer trigger](magn_trig/README.md#magn-trig "Test and debug magnetometer with interrupts")Test and debug magnetometer with interrupts
- [MAX17262 Fuel Gauge Sensor](max17262/README.md#max17262 "Get voltage, current and temperature data from a MAX17262 sensor (polling mode).")Get voltage, current and temperature data from a MAX17262 sensor (polling mode).
- [MAX6675 K-thermocouple to digital converter](max6675/README.md#max6675 "Get temperature from a MAX6675 K-thermocouple to digital converter (polling mode).")Get temperature from a MAX6675 K-thermocouple to digital converter (polling
  mode).
- [MPR Pressure Sensor](mpr/README.md#mpr "Get atmospheric pressure data from an MPR pressure sensor.")Get atmospheric pressure data from an MPR pressure sensor.
- [MPU6050 Invensense Motion Tracking Device](icm42605/README.md#icm42605 "Get temperature, acceleration, and angular velocity from an ICM42605 sensor (polling & trigger mode).")Get temperature, acceleration, and angular velocity from an ICM42605 sensor (polling & trigger
  mode).
- [MPU6050 motion tracking device](mpu6050/README.md#mpu6050 "Get temperature, acceleration, and angular velocity from an MPU6050 sensor (polling & trigger mode).")Get temperature, acceleration, and angular velocity from an MPU6050 sensor (polling & trigger
  mode).
- [MS5837 Digital Pressure Sensor](ms5837/README.md#ms5837 "Get pressure and temperature data from an MS5837 sensor (polling mode).")Get pressure and temperature data from an MS5837 sensor (polling mode).
- [NPCX ADC Comparator](adc_cmp_npcx/README.md#adc_cmp_npcx "Detect upper/lower voltage limits using NPCX ADC Comparator driver.")Detect upper/lower voltage limits using NPCX ADC Comparator driver.
- [NXP MCUX Analog Comparator (ACMP)](mcux_acmp/README.md#mcux_acmp "Get analog comparator data from an NXP MCUX Analog Comparator (ACMP).")Get analog comparator data from an NXP MCUX Analog Comparator (ACMP).
- [NXP MCUX Low-power Analog Comparator (LPCMP)](mcux_lpcmp/README.md#mcux_lpcmp "Get analog comparator data from an NXP MCUX Low-power Analog Comparator (LPCMP).")Get analog comparator data from an NXP MCUX Low-power Analog Comparator (LPCMP).
- [PAJ7620 Gesture Sensor](paj7620_gesture/README.md#paj7620_gesture "Get hand gesture data from PAJ7620 sensor.")Get hand gesture data from PAJ7620 sensor.
- [Proximity sensor](proximity_polling/README.md#proximity_polling "Get proximity data from up to 10 proximity sensors (polling mode).")Get proximity data from up to 10 proximity sensors (polling mode).
- [Quadrature Decoder Sensor](qdec/README.md#qdec "Get rotation data from a quadrature decoder sensor.")Get rotation data from a quadrature decoder sensor.
- [Sensor Clock](clock/README.md#sensor_clock "Test and debug Sensor Clock functionality.")Test and debug Sensor Clock functionality.
- [Sensor shell](sensor_shell/README.md#sensor_shell "Interact with sensors using the shell module.")Interact with sensors using the shell module.
- [SGP40 and SHT4X digital humidity and multipixel gas sensor](sgp40_sht4x/README.md#sgp40_sht4x "Get temperature, humidity and gas sensor data from SGP40 and SHT4X sensors (polling mode).")Get temperature, humidity and gas sensor data from SGP40 and SHT4X sensors (polling mode).
- [SHT3XD humidity sensor](sht3xd/README.md#sht3xd "Get temperature and humidity from a SHT3XD sensor (polling & trigger mode).")Get temperature and humidity from a SHT3XD sensor (polling & trigger mode).
- [SM351LT Magnetoresistive Sensor](sm351lt/README.md#sm351lt "Detect a magnet's presence using the SM351LT magnetoresistive sensor (polling & trigger mode).")Detect a magnet's presence using the SM351LT magnetoresistive sensor (polling & trigger mode).
- [SoC Voltage Sensor](soc_voltage/README.md#soc_voltage "Get voltage data from an SoC's voltage sensor(s).")Get voltage data from an SoC's voltage sensor(s).
- [TDK Advanced Pedometer and Event Detection (APEX)](tdk_apex/README.md#tdk_apex "Get TDK APEX event detection (trigger mode).")Get TDK APEX event detection (trigger mode).
- [TH02 Temperature and Humidity Sensor](th02/README.md#th02 "Get temperature and humidity data from a TH02 sensor (polling mode).")Get temperature and humidity data from a TH02 sensor (polling mode).
- [Thermometer](thermometer/README.md#thermometer "Get ambient temperature data from a temperature sensor and get alerts when temperature drifts above a threshold. (polling & trigger mode).")Get ambient temperature data from a temperature sensor and get alerts when temperature drifts
  above a threshold. (polling & trigger mode).
- [TMP108 Temperature Sensor](tmp108/README.md#tmp108 "Get temperature data from a TMP108 sensor (polling & trigger mode).")Get temperature data from a TMP108 sensor (polling & trigger mode).
- [TMP112 Temperature Sensor](tmp112/README.md#tmp112 "Get temperature data from a TMP112 sensor (polling & trigger mode).")Get temperature data from a TMP112 sensor (polling & trigger mode).
- [VCNL4040 Proximity and Ambient Light Sensor](vcnl4040/README.md#vcml4040 "Get proximity and ambient light data from a VCNL4040 sensor (polling & trigger mode).")Get proximity and ambient light data from a VCNL4040 sensor (polling & trigger mode).
- [VEAA-X-3 proportional pressure control valve](veaa_x_3/README.md#veea_x_3 "Control a VEAA-X-3 proportional pressure control valve.")Control a VEAA-X-3 proportional pressure control valve.
- [VEML6031 High Accuracy Ambient Light Sensor](veml6031/README.md#veml6031 "Get ambient light data from a VEML4040 sensor (polling mode).")Get ambient light data from a VEML4040 sensor (polling mode).
- [VL53L0X Time Of Flight sensor](vl53l0x/README.md#vl53l0x "Get distance data from a VL53L0X sensor (polling mode).")Get distance data from a VL53L0X sensor (polling mode).
